// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Statute Table Selector > SSA table type > Creates a snapshot of the Statute Selector when act and title props passed in to component 1`] = `
"<div class="v-slide-group v-slide-group--mobile v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--grow v-tabs--density-default acts__tabs" tabindex="-1" role="tablist">
  <!---->
  <div class="v-slide-group__container">
    <div class="v-slide-group__content"><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="false" data-testid="ssa-XI-11"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XI<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="false" data-testid="ssa-XVI-16"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XVI<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="false" data-testid="ssa-XVIII-18"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XVIII<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="false" data-testid="ssa-XIX-19"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XIX<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-tab-item--selected v-tab--selected v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="true" data-testid="ssa-XXI-21"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XXI<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button></div>
  </div>
  <!---->
</div>"
`;

exports[`Statute Table Selector > SSA table type > Creates a snapshot of the Statute Selector with default props 1`] = `
"<div class="v-slide-group v-slide-group--mobile v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--grow v-tabs--density-default acts__tabs" tabindex="-1" role="tablist">
  <!---->
  <div class="v-slide-group__container">
    <div class="v-slide-group__content"><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="false" data-testid="ssa-XI-11"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XI<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="false" data-testid="ssa-XVI-16"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XVI<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="false" data-testid="ssa-XVIII-18"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XVIII<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-tab-item--selected v-tab--selected v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="true" data-testid="ssa-XIX-19"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XIX<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab content-tabs" tabindex="0" role="tab" aria-selected="false" data-testid="ssa-XXI-21"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
        <!----><span class="v-btn__content" data-no-activator=""><span class="prefix__span">Title&nbsp;</span>XXI<div class="v-tab__slider"></div></span>
        <!---->
        <!---->
      </button></div>
  </div>
  <!---->
</div>"
`;
